objects/tffa__PartyDecisionMatrix__c.object
<CustomObject>
    <description>A decision matrix lists down business rule conditions (causes) and actions (effects), represented as a matrix where each row represents a unique combination. In PartyDecisionMatrix, the action is a decision outcome - APPROVED, DECLINED, etc related to the Party. The type determines the purpose of the decision. e.g. KYC. Party decisions typically affect related Application(s). e.g. if outcome is DECLINED, related Application may be DECLINED, if outcome is REVIEW,
        related Application may be marked for REVIEW. The conditions that make up the causes include - party attributes like PartyRole, IsMinor or KYC check reponses like IDVStatus, DebitBureauScore.</description>
    <fields>
        <fullName>CZFraudStatus__c</fullName>
        <description>Fraud Status of the party.</description>
        <label>Fraud status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CZOFACStatus__c</fullName>
        <description>OFAC Status of the party.</description>
        <label>OFAC status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state.</description>
        <formula>tffa__Disabled__c = False</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AdverseActionNoticeRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, a notice is sent out (via email) to the Party if related decision outcome is Declined.</description>
        <label>Adverse action notice required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__BrandCodeSet__c</fullName>
        <description>The brand code under which the application was started. Supports multiple (semicolon separated). A fact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual value in semicolons e.g. ;123;456;</inlineHelpText>
        <label>Brand code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CitizenshipSet__c</fullName>
        <description>Citizenship of associated party. Supports multiple values. A fact.</description>
        <label>Citizenship (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__Citizenship</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DebitBureauStatus__c</fullName>
        <description>Debit Bureau status of the party.</description>
        <label>Debit Bureau status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DecisionStrategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Champion/Challenger strategy to which this record belongs. Used in Champion/Challenger testing.</description>
        <label>Decision Strategy</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Strategies configured for Party Decision Matrix can only be selected.</errorMessage>
            <filterItems>
                <field>tffa__DecisionStrategy__c.tffa__Configuration__r.tffa__EntityType__c</field>
                <operation>equals</operation>
                <value>PartyDecisionMatrix</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__DecisionStrategy__c</referenceTo>
        <relationshipLabel>Party Decision Matrices</relationshipLabel>
        <relationshipName>PartyDecisionMatrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Explains the rule, giving some context about why the rule conditions (facts) lead to the rule action (outcome).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the configuration as unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IDVStatus__c</fullName>
        <description>ID Verification status of the party.</description>
        <label>IDV status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OrganizationTypeSet__c</fullName>
        <description>Allowed organization type(s) for the party (an organization). Supports multiple values. A fact.</description>
        <label>Organization type (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__OrganizationType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Outcome__c</fullName>
        <description>The prescribed action if the business rule conditions (represented by fields in the Facts fieldSet) are satisfied.</description>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyDecisionOutcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PartyType__c</fullName>
        <description>Type of Party</description>
        <label>Party type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Defines the relative order of records. Useful when making a selection from possible matches representing the output of an evaluation. In such cases, records with lower SortOrder values are selected.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Type of decisioning. Groups rule conditions and actions, such that each set may apply only when that type of decisioning is requested. e.g. KYC</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyDecisionType</valueSetName>
        </valueSet>
    </fields>
    <label>Party Decision Matrix</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__SortOrder__c</columns>
        <columns>tffa__IDVStatus__c</columns>
        <columns>tffa__DebitBureauStatus__c</columns>
        <columns>tffa__Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>tffa__KYC</fullName>
        <columns>NAME</columns>
        <columns>tffa__SortOrder__c</columns>
        <columns>tffa__IDVStatus__c</columns>
        <columns>tffa__DebitBureauStatus__c</columns>
        <columns>tffa__Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Type__c</field>
            <operation>equals</operation>
            <value>KYC</value>
        </filters>
        <label>KYC</label>
    </listViews>
    <nameField>
        <displayFormat>PDM-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Party Decision Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>tffa__DecisionStrategy</fullName>
        <active>true</active>
        <description>Applies validations around DecisionStrategy field
1.  entityPurpose of strategy must match type</description>
        <errorConditionFormula>NOT(ISBLANK(tffa__DecisionStrategy__c)) &amp;&amp; TEXT(tffa__DecisionStrategy__r.tffa__Configuration__r.tffa__EntityPurpose__c) &lt;&gt; TEXT(tffa__Type__c)</errorConditionFormula>
        <errorDisplayField>tffa__DecisionStrategy__c</errorDisplayField>
        <errorMessage>Decision Strategy purpose must match the Party Decision Matrix type.</errorMessage>
    </validationRules>
</CustomObject>